--- a/css/master2.css
+++ b/css/master2.css
@@ -1,6 +1,6 @@
 #active{
 	background: #777;
-	color: #ddd;
+	color: #fff;
 }
 .frame {
 	width: auto;
@@ -25,11 +25,12 @@
 	display : grid;
 	grid-template-columns: 150px 1fr;
 }
-@media (max-width:600px) {
+@media (max-width:500px) {
 	.container{
 		display : inline-block;
 		width:100%;
 	}
+
 }
 
 .nav {
@@ -40,7 +41,7 @@
 .nav-list {
 	list-style: none;
 	margin: 0px;
-	padding: 10px 10px;
+	/* padding: 10px 10px; */
 }
 
 .content {
@@ -48,13 +49,42 @@
 	background-color: white;
 	height:50vh;
 	width:100%;
-	padding: 20px 10px 10px 10px;
+	padding: 10px;
 }
 
 .footer {
 	border-top: 1px solid #aaa;
 	margin: 20px 20px 0;
 	font-size: 12px;
+}
+
+ul {
+ list-style-type: none;
+ margin: 0;
+ padding: 0;
+ overflow: hidden;
+}
+
+li a:hover {
+  background-color: #111111;
+}
+
+li {
+	float: left;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 8px 16px 8px 16px;
+  text-decoration: none;
+}
+@media (min-width:501px){
+	li a{
+		width:150px;
+		padding:5px 0px 5px 0px;
+	}
 }
 
 body {
